# Reitinhaku_TiRa

./: .coverage  .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittely.md  testaus.md  toteutus.md  tyoaikakirjanpito.md
dokumentaatio/viikkopalautukset/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: karttaruutu.py  kayttoliittyma.py
src/algoritmit/: dijkstra.py  ida_star.py
src/kartat/: kartta1.py
src/kekokansio/: keko.py
src/tests/: dijkstra_test.py  ida_test.py  karttaruutu_test.py  keko_test.py
src/tests/test_assets/: d_assets.py
