[tool.poetry]
name = "reitinhaku-tira"
version = "0.1.0"
description = ""
authors = ["hartonenolli <hartonenolli@gmail.com>"]
readme = "README.md"
packages = [{include = "reitinhaku_tira"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
